# BlueStorm-API

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yaml  main.yml
pharmacies/: pyproject.toml  wsgi.py
pharmacies/blueprint/v1/: resources.py
pharmacies/blueprint/v1/docs/: patient.yaml  pharmacies.yaml  transaction.yaml  transactions.yaml
pharmacies/ext/: database.py  doc_swagger.py
pharmacies/models/: core.py
pharmacies/pharmacies/: database.py  main.py
pharmacies/pharmacies/blueprint/v1/: resources.py
pharmacies/pharmacies/blueprint/v1/docs/: patients.yaml  pharmacie.yaml  transactions.yaml
pharmacies/pharmacies/ext/: backend_test.db  database.py  database2.py  doc_swagger.py
pharmacies/pharmacies/models/: core.py
pharmacies/tests/: test_pharmacies.py
