[tool.poetry]
name = "pharmacies"
version = "0.1.0"
description = ""
authors = ["Hendrek Rodrigues <llhendrek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.40"
marshmallow = "^3.17.1"
psycopg2-binary = "^2.9.3"
flasgger = "^0.9.5"
flake8 = "^5.0.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
